Bug 547891 - [13] flag error for unqualified yield method invocations and yield type - and yield variables
Change-Id: I22ef547137b2488a568af86b1dd4c4cf0991a2a5